# hello-cuda

./: .bazelrc  .gitignore  MODULE.bazel  Makefile
blur/: kernel.cu  kernel.h  main.cpp
grayscale/: BUILD.bazel  kernel.cu  kernel.h  main.cpp
hello_world/: kernel.cu
matrix_multiplication/: kernel.cu
matrix_multiplication_per_column/: kernel.cu  kernel.h  main.cpp
matrix_multiplication_per_row/: kernel.cu
matrix_vector_multiplication/: kernel.cu  kernel.h  main.cpp
utils/: BUILD  jpeg.cpp  jpeg.h
vector_addition/: kernel.cu  main.cpp
