###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

"""
This is an example of a Bzlmod file. This file is used to define the external dependencies of a Bazel project.

"""

module(
    name = "example_bzlmod",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "toolchains_llvm", version = "1.0.0")
bazel_dep(name = 'rules_cuda', dev_dependency = True)
git_override(
    module_name = "rules_cuda",
    remote = "https://github.com/bazel-contrib/rules_cuda.git",
    commit = "1f8d4a0733226b246e799f3b17e0c76875a7997b",
)

cuda = use_extension('@rules_cuda//cuda:extensions.bzl', 'toolchain', dev_dependency = True)
cuda.local_toolchain()

bazel_dep(name = "libjpeg_turbo", version = "2.1.91")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)
